# lidar_robot

./: LICENSE  README.md
lidar_robot_control/: CMakeLists.txt  package.xml
lidar_robot_control/config/: controller.yaml
lidar_robot_control/launch/: robot_control.launch
lidar_robot_gazebo/: CMakeLists.txt  package.xml
lidar_robot_gazebo/config/: mapping.rviz  simple.rviz  simple_2d.rviz  simple_3d.rviz
lidar_robot_gazebo/launch/: custom_world.launch  empty_world.launch  empty_world_2d.launch  empty_world_3d.launch
lidar_robot_gazebo/worlds/: small.world
lidar_robot_model/: CMakeLists.txt  package.xml
lidar_robot_model/config/: simple.rviz
lidar_robot_model/launch/: display.launch  display_2d.launch  display_3d.launch
lidar_robot_model/urdf/body/: body.gazebo.xacro  body.urdf.xacro
lidar_robot_model/urdf/caster/: caster.gazebo.xacro  caster.urdf.xacro
lidar_robot_model/urdf/lidar_base/: lidar_base.gazebo.xacro  lidar_base.urdf.xacro
lidar_robot_model/urdf/robots/: robot.urdf.xacro  robot_2d.urdf.xacro  robot_3d.urdf.xacro
lidar_robot_model/urdf/sensors/: imu.gazebo.xacro  imu.urdf.xacro  lrf.gazebo.xacro  lrf.urdf.xacro
lidar_robot_model/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
lidar_robot_navigation/: CMakeLists.txt  package.xml
lidar_robot_navigation/launch/: navigation_2d.launch
lidar_robot_navigation/launch/mcl/: amcl.launch
lidar_robot_navigation/launch/mcl/config/: amcl.yaml
lidar_robot_navigation/launch/move_base/: move_base.launch
lidar_robot_navigation/launch/move_base/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  (+3 more)
lidar_robot_navigation/launch/slam/: gmapping.launch
lidar_robot_navigation/maps/: map.pgm
