<?xml version="1.0"?>
<package format="2">
  <name>lidar_robot_control</name>
  <version>0.0.0</version>
  <description>The lidar_robot_control package</description>

  <maintainer email="todo@todo.todo">HHorimoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
